[gd_scene load_steps=8 format=2]

[ext_resource path="res://sprites/level_status/level_03_completed.jpg" type="Texture" id=1]
[ext_resource path="res://scripts/level_completed_03.gd" type="Script" id=2]
[ext_resource path="res://sprites/mouse_player_cutouts.png" type="Texture" id=3]
[ext_resource path="res://Fonts/Lora-VariableFont_wght.ttf" type="DynamicFontData" id=4]

[sub_resource type="DynamicFont" id=3]
size = 35
font_data = ExtResource( 4 )

[sub_resource type="DynamicFont" id=2]
size = 35
font_data = ExtResource( 4 )

[sub_resource type="Animation" id=1]
resource_name = "mousy"
length = 1.5
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("mousePlayer/MousePlayer:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5, 1 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2 ]
}

[node name="level3_completed" type="Node2D"]
script = ExtResource( 2 )

[node name="TextureRect" type="Sprite" parent="."]
position = Vector2( 288, 512 )
scale = Vector2( 0.533333, 0.533333 )
texture = ExtResource( 1 )

[node name="NextLevel" type="Button" parent="."]
margin_left = 200.0
margin_top = 491.0
margin_right = 386.0
margin_bottom = 543.0
custom_fonts/font = SubResource( 3 )
text = "Next Level"
flat = true

[node name="Replay" type="Button" parent="."]
margin_left = 185.0
margin_top = 551.0
margin_right = 400.0
margin_bottom = 603.0
custom_fonts/font = SubResource( 3 )
text = "Replay Level"
flat = true

[node name="QuitButton" type="Button" parent="."]
margin_left = 243.0
margin_top = 613.0
margin_right = 328.0
margin_bottom = 665.0
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_fonts/font = SubResource( 2 )
text = "Quit"
flat = true

[node name="mousePlayer" type="AnimationPlayer" parent="."]
anims/mousy = SubResource( 1 )

[node name="MousePlayer" type="Sprite" parent="mousePlayer"]
position = Vector2( 281, 825 )
texture = ExtResource( 3 )
vframes = 3

[connection signal="pressed" from="NextLevel" to="." method="_on_NextLevel_pressed"]
[connection signal="pressed" from="Replay" to="." method="_on_Replay_pressed"]
[connection signal="pressed" from="QuitButton" to="." method="_on_QuitButton_pressed"]
